--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='/build/playground.css'>
 
-	<script defer type="module" src='/build/bundle.js'></script>
+	<script defer type="module" src='/build/playground.js'></script>
 </head>
 
 <body>
