--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-	<title>Svelte app</title>
+    <title>Fat Fuzzy | 👾 Playground</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/playground.css'>
+    <link rel="icon" type="image/svg" href="/favicon.svg" />
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/build/playground.css" />
 
-	<script defer type="module" src='/build/playground.js'></script>
-</head>
+    <script defer type="module" src="/build/playground.js"></script>
+  </head>
 
-<body>
-	<div id="playground" class="playground"></div>
-</body>
+  <body>
+    <div id="playground" class="playground"></div>
+  </body>
 </html>
